tests/enum_perf/enum_perf.exp
Error ----------------------------------------------------------------------------------------------------- yuge.js:23:5

Cannot cast empty string to `ErrorCode` because string [1] is incompatible with `ErrorCode` [2]. [incompatible-cast]

   yuge.js:23:5
   23|     '' as ErrorCode; // also, error pos omits this line completely
           ^^ [1]

References:
   yuge.js:23:11
   23|     '' as ErrorCode; // also, error pos omits this line completely
                 ^^^^^^^^^ [2]



Found 1 error
